framec_tests/language_specific/typescript/v3_cli_project/positive/simple_project/mod_b.frm
@target typescript

system S2 {
    machine:
        $A {
            e() { -> $A() }
        }
}

