framec_tests/language_specific/typescript/v3_cli_project/negative/parent_forward_without_parent/child.frm
@target typescript

system C {
    machine:
        $A {
            e() { => $^ }
        }
}

